Fix spacing

--- a/client/src/app/shared/shared-video-miniature/videos-list.component.scss
+++ b/client/src/app/shared/shared-video-miniature/videos-list.component.scss
@@ -44,11 +44,6 @@ $margin-top: 2rem;
   }
 }
 
-my-global-icon[iconname=live] {
-  position: relative;
-  top: -1px;
-}
-
 @media screen and (max-width: $mobile-view) {
   my-video-filters-header {
     display: inline-block;
